// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile aа huge 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
}

.IS1 {
  font-size: 28px;
  line-height: 28px;
  margin-bottom: 10px;
}

.IS2 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": "10px",
      "paddingVertical": "15px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS2"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <div
          className="css-view-1dbjc4n r-marginBottom-p1pxzi S1"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <h3
          aria-level="3"
          className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontWeight-16dba41 IS1 S2"
          role="heading"
        >
          This is tile headline
        </h3>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`tile aа medium 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
}

.IS1 {
  font-size: 20px;
  line-height: 20px;
}

.IS2 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": "10px",
      "paddingVertical": "15px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS2"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <div
          className="css-view-1dbjc4n r-marginBottom-p1pxzi S1"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <h3
          aria-level="3"
          className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontWeight-16dba41 r-marginBottom-d0pm55 IS1 S2"
          role="heading"
        >
          This is tile headline
        </h3>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`tile aа wide 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
}

.IS1 {
  font-size: 28px;
  line-height: 28px;
  margin-bottom: 10px;
}

.IS2 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": "10px",
      "paddingVertical": "15px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS2"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <div
          className="css-view-1dbjc4n r-marginBottom-p1pxzi S1"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <h3
          aria-level="3"
          className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontWeight-16dba41 IS1 S2"
          role="heading"
        >
          This is tile headline
        </h3>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;

exports[`tile aа without breakpoint should be like medium 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
}

.IS1 {
  font-size: 20px;
  line-height: 20px;
}

.IS2 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": "10px",
      "paddingVertical": "15px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n IS2"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <div
        className="css-view-1dbjc4n"
      >
        <div
          className="css-view-1dbjc4n r-marginBottom-p1pxzi S1"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </div>
        <h3
          aria-level="3"
          className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontWeight-16dba41 r-marginBottom-d0pm55 IS1 S2"
          role="heading"
        >
          This is tile headline
        </h3>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </div>
    </div>
  </div>
</Link>
`;
